proj_& assign/GP-13_CJ/RIT2009037,21,78,25,11/cj.output
Nonterminals useless in grammar

   SPEC


Terminals unused in grammar

   THROW
   INTERFACE
   BREAK
   JNULL
   BOOLLIT
   TRY
   CATCH
   THIS
   ELSE
   DOT
   "="
   '!'


Rules useless in grammar

  217 SPEC: '%' ID SPEC
  218     | '%' ID
  219     | '%' NUM ID SPEC
  220     | '%' NUM ID


State 54 conflicts: 5 shift/reduce
State 78 conflicts: 2 shift/reduce
State 83 conflicts: 5 shift/reduce
State 85 conflicts: 5 shift/reduce
State 94 conflicts: 5 shift/reduce
State 110 conflicts: 5 shift/reduce
State 121 conflicts: 5 shift/reduce
State 123 conflicts: 5 shift/reduce
State 146 conflicts: 1 shift/reduce
State 150 conflicts: 15 shift/reduce, 1 reduce/reduce
State 162 conflicts: 5 shift/reduce
State 180 conflicts: 1 shift/reduce
State 184 conflicts: 15 shift/reduce, 1 reduce/reduce
State 186 conflicts: 15 shift/reduce, 1 reduce/reduce
State 187 conflicts: 15 shift/reduce, 1 reduce/reduce
State 188 conflicts: 15 shift/reduce, 1 reduce/reduce
State 189 conflicts: 15 shift/reduce, 1 reduce/reduce
State 195 conflicts: 2 shift/reduce, 1 reduce/reduce
State 240 conflicts: 15 shift/reduce, 1 reduce/reduce
State 243 conflicts: 1 shift/reduce
State 254 conflicts: 12 shift/reduce
State 257 conflicts: 15 shift/reduce, 1 reduce/reduce
State 318 conflicts: 16 shift/reduce, 1 reduce/reduce
State 319 conflicts: 1 shift/reduce
State 332 conflicts: 1 shift/reduce
State 339 conflicts: 15 shift/reduce, 1 reduce/reduce
State 350 conflicts: 1 shift/reduce
State 399 conflicts: 15 shift/reduce, 17 reduce/reduce
State 411 conflicts: 15 shift/reduce, 1 reduce/reduce
State 417 conflicts: 15 shift/reduce
State 429 conflicts: 5 shift/reduce
State 430 conflicts: 15 shift/reduce
State 444 conflicts: 15 shift/reduce, 1 reduce/reduce
State 445 conflicts: 15 shift/reduce, 1 reduce/reduce
State 454 conflicts: 15 shift/reduce, 1 reduce/reduce
State 455 conflicts: 15 shift/reduce, 1 reduce/reduce
State 457 conflicts: 15 shift/reduce, 1 reduce/reduce
State 458 conflicts: 15 shift/reduce, 1 reduce/reduce
State 471 conflicts: 15 shift/reduce, 1 reduce/reduce
State 472 conflicts: 15 shift/reduce, 1 reduce/reduce
State 487 conflicts: 16 shift/reduce
State 508 conflicts: 5 shift/reduce
State 509 conflicts: 5 shift/reduce
State 510 conflicts: 5 shift/reduce
State 511 conflicts: 5 shift/reduce
State 512 conflicts: 5 shift/reduce
State 530 conflicts: 15 shift/reduce, 1 reduce/reduce
State 534 conflicts: 15 shift/reduce, 16 reduce/reduce
State 536 conflicts: 1 shift/reduce
State 559 conflicts: 1 reduce/reduce
State 561 conflicts: 15 shift/reduce
State 562 conflicts: 15 shift/reduce
State 588 conflicts: 15 shift/reduce, 1 reduce/reduce
State 589 conflicts: 15 shift/reduce, 1 reduce/reduce
State 592 conflicts: 15 shift/reduce


Grammar

    0 $accept: S $end

    1 S: HEADERS FUNC_C
    2  | FUNC_C
    3  | PACKAGES IMPORTS CLASSHEADER
    4  | PACKAGES CLASSHEADER
    5  | IMPORTS CLASSHEADER
    6  | CLASSHEADER

    7 CLASS_HIERARCHY: CLASS_HIERARCHY '.' ID
    8                | ID

    9 PACKAGES: PACKAGE CLASS_HIERARCHY ';'

   10 IMPORTS: LIB_J
   11        | LIB_J LIB_J

   12 HEADERS: LIB_C
   13        | LIB_C LIB_C

   14 LIB_C: HEADERC '<' ID '.' ID '>'

   15 LIB_J: HEADERJ CLASS_HIERARCHY ';'
   16      | HEADERJ CLASS_HIERARCHY '.' '*' ';'
   17      | HEADERJ CLASS_HIERARCHY error
   18      | HEADERJ error ';'

   19 DTYPE: INT
   20      | FLOAT
   21      | DOUBLE
   22      | CHAR
   23      | LONG
   24      | SHORT
   25      | BOOLEAN
   26      | VOID

   27 CLASSNAME: DTYPE
   28          | CLASS_HIERARCHY

   29 CNAMELIST: CLASS_HIERARCHY
   30          | CNAMELIST ',' CLASS_HIERARCHY

   31 PARAM: DTYPE ID ',' PARAM
   32      | DTYPE ID
   33      | DTYPE ID '[' NUM ']' ',' PARAM
   34      | DTYPE ID '[' ']' ',' PARAM
   35      | DTYPE ID '[' ']'
   36      | /* empty */

   37 PARAM_C: DTYPE ID ',' PARAM_C
   38        | DTYPE ID
   39        | DTYPE ID '[' NUM ']' ',' PARAM_C
   40        | DTYPE ID '[' ']' ',' PARAM_C
   41        | DTYPE ID '[' ']'
   42        | DTYPE '*' ID ',' PARAM_C
   43        | DTYPE '*' ID
   44        | /* empty */

   45 EXP: INIT2
   46    | INIT3 '(' INIT2 ')'

   47 VAR: EXP ';' VAR
   48    | EXP ';'

   49 ARG: ID_NUM ',' ARG
   50    | ID_NUM
   51    | /* empty */

   52 REA: '&' ID_NUM ',' REA
   53    | ID_NUM ',' REA
   54    | '&' ID_NUM
   55    | ID_NUM

   56 CLASSHEADER: MODIFIERS CLASS ID EXTEND INTERFACES '{' FUNC_J '}'
   57            | MODIFIERS CLASS ID EXTEND '{' FUNC_J '}'
   58            | MODIFIERS CLASS ID INTERFACES '{' FUNC_J '}'
   59            | CLASS ID EXTEND INTERFACES '{' FUNC_J '}'
   60            | MODIFIERS CLASS ID '{' FUNC_J '}'
   61            | CLASS ID EXTEND '{' FUNC_J '}'
   62            | CLASS ID INTERFACES '{' FUNC_J '}'
   63            | CLASS ID '{' FUNC_J '}'

   64 MODIFIERS: MODIFIER
   65          | MODIFIERS MODIFIER

   66 MODIFIER1: MODIFIER
   67          | MODIFIER1 MODIFIER
   68          | /* empty */

   69 MODIFIER: PUBLIC
   70         | PROTECTED
   71         | PRIVATE
   72         | STATIC

   73 EXTEND: EXTENDS CLASSNAME

   74 INTERFACES: IMPLEMENTS CNAMELIST

   75 FUNC_C: DTYPE ID '(' PARAM_C ')' '{' COND_C '}' FUNC_C
   76       | MAIN_C
   77       | DTYPE ID '(' error ')' '{' COND_C '}' FUNC_C
   78       | DTYPE error '(' PARAM_C ')' '{' COND_C '}' FUNC_C
   79       | error ID '(' PARAM_C ')' '{' COND_C '}' FUNC_C
   80       | DTYPE error '(' error ')' '{' COND_C '}' FUNC_C
   81       | error ID '(' error ')' '{' COND_C '}' FUNC_C

   82 FUNC_J: MODIFIER1 DTYPE ID '(' PARAM ')' '{' COND_J '}' FUNC_J
   83       | MAIN_J
   84       | MODIFIER1 DTYPE ID '(' error ')' '{' COND_J '}' FUNC_J
   85       | MODIFIER1 DTYPE error '(' PARAM ')' '{' COND_J '}' FUNC_J
   86       | MODIFIER1 error ID '(' PARAM ')' '{' COND_J '}' FUNC_J
   87       | MODIFIER1 DTYPE error '(' error ')' '{' COND_J '}' FUNC_J
   88       | error ID '(' error ')' '{' COND_J '}' FUNC_J
   89       | /* empty */

   90 MAIN_J: PUBLIC STATIC VOID MAIN '(' STRING ID '[' ']' ')' THROWS ID '{' COND_J '}'
   91       | PUBLIC STATIC VOID MAIN '(' STRING ID '[' ']' ')' '{' COND_J '}'
   92       | PUBLIC error VOID MAIN '(' STRING ID '[' ']' ')' '{' COND_J '}'
   93       | PUBLIC STATIC VOID error '(' STRING ID '[' ']' ')' '{' COND_J '}'
   94       | PUBLIC STATIC VOID MAIN '(' error ')' '{' COND_J '}'

   95 MAIN_C: INT MAIN '(' INT ID ',' CHAR '*' ID '[' ']' ')' '{' COND_C '}'
   96       | INT MAIN '(' ')' '{' COND_C '}'

   97 COND_C: DTYPE ID ';' COND_C
   98       | DTYPE '*' ID ';' COND_C
   99       | DTYPE ID ';'
  100       | DTYPE '*' ID ';'
  101       | DTYPE ID '[' ID_NUM ']' ';' COND_C
  102       | FOR '(' INIT1 EXP2 INIT3 ')' DEF_C
  103       | FOR '(' error EXP2 INIT3 ')' DEF_C
  104       | FOR '(' INIT1 error INIT3 ')' DEF_C
  105       | FOR '(' INIT1 EXP2 error ')' DEF_C
  106       | FOR '(' error error INIT3 ')' DEF_C
  107       | FOR '(' error EXP2 error ')' DEF_C
  108       | FOR '(' INIT1 error error ')' DEF_C
  109       | FOR '(' error error error ')' DEF_C
  110       | WHILE COND1 DEF_C
  111       | WHILE COND2 DEF_C
  112       | IF COND1 DEF_C
  113       | IF COND2 DEF_C
  114       | VAR COND_C
  115       | VAR
  116       | ID '(' '"' '%' ID '"' ',' REA ')' ';' COND_C
  117       | ID '(' '"' '%' ID '"' ',' REA ')' ';'
  118       | ID '(' '"' '%' ID '"' ',' ARG ')' ';' COND_C
  119       | ID '(' '"' '%' ID '"' ',' ARG ')' ';'
  120       | ID '(' ARG ')' ';' COND_C
  121       | ID '(' ARG ')' ';'
  122       | ID '(' '"' ID '"' ')' ';' COND_C
  123       | ID '(' '"' ID '"' ')' ';'
  124       | RET
  125       | WHILE error DEF_C
  126       | DTYPE error ';' COND_C
  127       | DTYPE '*' error ';' COND_C
  128       | DTYPE ID error COND_C
  129       | error COND_C

  130 COND_J: DTYPE ID ';' COND_J
  131       | DTYPE ID '[' ']' '=' NEW DTYPE '[' ID_NUM ']' ';' COND_J
  132       | FOR '(' INIT1 EXP2 INIT3 ')' DEF_J
  133       | WHILE COND1 DEF_J
  134       | WHILE COND2 DEF_J
  135       | IF COND1 DEF_J
  136       | IF COND2 DEF_J
  137       | RET
  138       | INIT2 ';' COND_J
  139       | INIT2 ';'
  140       | CLASS_HIERARCHY '(' ID ')' ';' COND_J
  141       | CLASS_HIERARCHY '(' '"' ID '"' ')' ';' COND_J
  142       | CLASS_HIERARCHY '(' '"' ID '"' ')' ';'
  143       | CLASS_HIERARCHY '(' ID ')' ';'
  144       | ID '(' ARG ')' ';' COND_J
  145       | ID '(' ARG ')' ';'
  146       | DTYPE ID '[' ']' error COND_J
  147       | DTYPE error ';' COND_J
  148       | DTYPE ID error COND_J
  149       | error ';' COND_J
  150       | error DEF_J

  151 DEF_C: '{' BODY_C '}'
  152      | INIT2 ';'
  153      | COND_C
  154      | /* empty */

  155 DEF_J: '{' BODY_J '}'
  156      | COND_J

  157 BODY_C: BODY_C BODY_C
  158       | INIT2 ';'
  159       | COND_C
  160       | /* empty */

  161 BODY_J: BODY_J BODY_J
  162       | COND_J
  163       | /* empty */

  164 INIT1: ID '=' INIT1 ';'
  165      | INIT1 '+' INIT1 ';'
  166      | INIT1 '-' INIT1 ';'
  167      | INIT1 '*' INIT1 ';'
  168      | INIT1 '/' INIT1 ';'
  169      | INIT1 '<' INIT1 ';'
  170      | INIT1 '>' INIT1 ';'
  171      | INIT1 LE INIT1 ';'
  172      | INIT1 GE INIT1 ';'
  173      | INIT1 EQ INIT1 ';'
  174      | INIT1 NE INIT1 ';'
  175      | INIT1 OR INIT1 ';'
  176      | INIT1 AND INIT1 ';'
  177      | ID_NUM

  178 INIT2: ID '=' INIT2
  179      | INIT2 '+' INIT2
  180      | INIT2 '-' INIT2
  181      | INIT2 '*' INIT2
  182      | INIT2 '/' INIT2
  183      | INIT2 '<' INIT2
  184      | INIT2 '>' INIT2
  185      | INIT2 LE INIT2
  186      | INIT2 GE INIT2
  187      | INIT2 EQ INIT2
  188      | INIT2 NE INIT2
  189      | INIT2 OR INIT2
  190      | INIT2 AND INIT2
  191      | INIT2 '+' '+'
  192      | INIT2 '-' '-'
  193      | ID_NUM
  194      | ID '(' ARG ')'

  195 INIT3: INIT2
  196      | /* empty */

  197 EXP2: INIT2 '<' INIT2 ';'
  198     | INIT2 '>' INIT2 ';'
  199     | INIT2 LE INIT2 ';'
  200     | INIT2 GE INIT2 ';'
  201     | INIT2 EQ INIT2 ';'
  202     | INIT2 NE INIT2 ';'
  203     | INIT2 OR INIT2 ';'
  204     | INIT2 AND INIT2 ';'

  205 COND1: '(' INIT2 '<' INIT2 ')'
  206      | '(' INIT2 '>' INIT2 ')'
  207      | '(' INIT2 LE INIT2 ')'
  208      | '(' INIT2 GE INIT2 ')'
  209      | '(' INIT2 EQ INIT2 ')'
  210      | '(' INIT2 NE INIT2 ')'
  211      | '(' INIT2 OR INIT2 ')'
  212      | '(' INIT2 AND INIT2 ')'

  213 ID_NUM: ID
  214       | NUM

  215 COND2: '(' ID_NUM ')'

  216 RET: RETURN INIT3 ';'


Terminals, with rules where they appear

$end (0) 0
'!' (33)
'"' (34) 116 117 118 119 122 123 141 142
'%' (37) 116 117 118 119
'&' (38) 52 54
'(' (40) 46 75 77 78 79 80 81 82 84 85 86 87 88 90 91 92 93 94 95 96
    102 103 104 105 106 107 108 109 116 117 118 119 120 121 122 123
    132 140 141 142 143 144 145 194 205 206 207 208 209 210 211 212
    215
')' (41) 46 75 77 78 79 80 81 82 84 85 86 87 88 90 91 92 93 94 95 96
    102 103 104 105 106 107 108 109 116 117 118 119 120 121 122 123
    132 140 141 142 143 144 145 194 205 206 207 208 209 210 211 212
    215
'*' (42) 16 42 43 95 98 100 127 167 181
'+' (43) 165 179 191
',' (44) 30 31 33 34 37 39 40 42 49 52 53 95 116 117 118 119
'-' (45) 166 180 192
'.' (46) 7 14 16
'/' (47) 168 182
';' (59) 9 15 16 18 47 48 97 98 99 100 101 116 117 118 119 120 121
    122 123 126 127 130 131 138 139 140 141 142 143 144 145 147 149
    152 158 164 165 166 167 168 169 170 171 172 173 174 175 176 197
    198 199 200 201 202 203 204 216
'<' (60) 14 169 183 197 205
'=' (61) 131 164 178
'>' (62) 14 170 184 198 206
'[' (91) 33 34 35 39 40 41 90 91 92 93 95 101 131 146
']' (93) 33 34 35 39 40 41 90 91 92 93 95 101 131 146
'{' (123) 56 57 58 59 60 61 62 63 75 77 78 79 80 81 82 84 85 86 87
    88 90 91 92 93 94 95 96 151 155
'}' (125) 56 57 58 59 60 61 62 63 75 77 78 79 80 81 82 84 85 86 87
    88 90 91 92 93 94 95 96 151 155
error (256) 17 18 77 78 79 80 81 84 85 86 87 88 92 93 94 103 104 105
    106 107 108 109 125 126 127 128 129 146 147 148 149 150
PACKAGE (258) 9
CLASS (259) 56 57 58 59 60 61 62 63
THROW (260)
INTERFACE (261)
THROWS (262) 90
EXTENDS (263) 73
IMPLEMENTS (264) 74
MAIN (265) 90 91 92 94 95 96
HEADERC (266) 14
HEADERJ (267) 15 16 17 18
RETURN (268) 216
BREAK (269)
NEW (270) 131
JNULL (271)
LONG (272) 23
DOUBLE (273) 21
STRING (274) 90 91 92 93
INT (275) 19 95 96
FLOAT (276) 20
CHAR (277) 22 95
SHORT (278) 24
VOID (279) 26 90 91 92 93 94
BOOLEAN (280) 25
BOOLLIT (281)
PUBLIC (282) 69 90 91 92 93 94
PRIVATE (283) 71
PROTECTED (284) 70
TRY (285)
CATCH (286)
STATIC (287) 72 90 91 93 94
THIS (288)
FOR (289) 102 103 104 105 106 107 108 109 132
WHILE (290) 110 111 125 133 134
IF (291) 112 113 135 136
ELSE (292)
LE (293) 171 185 199 207
GE (294) 172 186 200 208
EQ (295) 173 187 201 209
NE (296) 174 188 202 210
OR (297) 175 189 203 211
AND (298) 176 190 204 212
ID (299) 7 8 14 31 32 33 34 35 37 38 39 40 41 42 43 56 57 58 59 60
    61 62 63 75 77 79 81 82 84 86 88 90 91 92 93 95 97 98 99 100 101
    116 117 118 119 120 121 122 123 128 130 131 140 141 142 143 144
    145 146 148 164 178 194 213
NUM (300) 33 39 214
DOT (301)
"=" (302)


Nonterminals, with rules where they appear

$accept (68)
    on left: 0
S (69)
    on left: 1 2 3 4 5 6, on right: 0
CLASS_HIERARCHY (70)
    on left: 7 8, on right: 7 9 15 16 17 28 29 30 140 141 142 143
PACKAGES (71)
    on left: 9, on right: 3 4
IMPORTS (72)
    on left: 10 11, on right: 3 5
HEADERS (73)
    on left: 12 13, on right: 1
LIB_C (74)
    on left: 14, on right: 12 13
LIB_J (75)
    on left: 15 16 17 18, on right: 10 11
DTYPE (76)
    on left: 19 20 21 22 23 24 25 26, on right: 27 31 32 33 34 35 37
    38 39 40 41 42 43 75 77 78 80 82 84 85 87 97 98 99 100 101 126
    127 128 130 131 146 147 148
CLASSNAME (77)
    on left: 27 28, on right: 73
CNAMELIST (78)
    on left: 29 30, on right: 30 74
PARAM (79)
    on left: 31 32 33 34 35 36, on right: 31 33 34 82 85 86
PARAM_C (80)
    on left: 37 38 39 40 41 42 43 44, on right: 37 39 40 42 75 78 79
EXP (81)
    on left: 45 46, on right: 47 48
VAR (82)
    on left: 47 48, on right: 47 114 115
ARG (83)
    on left: 49 50 51, on right: 49 118 119 120 121 144 145 194
REA (84)
    on left: 52 53 54 55, on right: 52 53 116 117
CLASSHEADER (85)
    on left: 56 57 58 59 60 61 62 63, on right: 3 4 5 6
MODIFIERS (86)
    on left: 64 65, on right: 56 57 58 60 65
MODIFIER1 (87)
    on left: 66 67 68, on right: 67 82 84 85 86 87
MODIFIER (88)
    on left: 69 70 71 72, on right: 64 65 66 67
EXTEND (89)
    on left: 73, on right: 56 57 59 61
INTERFACES (90)
    on left: 74, on right: 56 58 59 62
FUNC_C (91)
    on left: 75 76 77 78 79 80 81, on right: 1 2 75 77 78 79 80 81
FUNC_J (92)
    on left: 82 83 84 85 86 87 88 89, on right: 56 57 58 59 60 61 62
    63 82 84 85 86 87 88
MAIN_J (93)
    on left: 90 91 92 93 94, on right: 83
MAIN_C (94)
    on left: 95 96, on right: 76
COND_C (95)
    on left: 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111
    112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127
    128 129, on right: 75 77 78 79 80 81 95 96 97 98 101 114 116 118
    120 122 126 127 128 129 153 159
COND_J (96)
    on left: 130 131 132 133 134 135 136 137 138 139 140 141 142 143
    144 145 146 147 148 149 150, on right: 82 84 85 86 87 88 90 91
    92 93 94 130 131 138 140 141 144 146 147 148 149 156 162
DEF_C (97)
    on left: 151 152 153 154, on right: 102 103 104 105 106 107 108
    109 110 111 112 113 125
DEF_J (98)
    on left: 155 156, on right: 132 133 134 135 136 150
BODY_C (99)
    on left: 157 158 159 160, on right: 151 157
BODY_J (100)
    on left: 161 162 163, on right: 155 161
INIT1 (101)
    on left: 164 165 166 167 168 169 170 171 172 173 174 175 176 177,
    on right: 102 104 105 108 132 164 165 166 167 168 169 170 171 172
    173 174 175 176
INIT2 (102)
    on left: 178 179 180 181 182 183 184 185 186 187 188 189 190 191
    192 193 194, on right: 45 46 138 139 152 158 178 179 180 181 182
    183 184 185 186 187 188 189 190 191 192 195 197 198 199 200 201
    202 203 204 205 206 207 208 209 210 211 212
INIT3 (103)
    on left: 195 196, on right: 46 102 103 104 106 132 216
EXP2 (104)
    on left: 197 198 199 200 201 202 203 204, on right: 102 103 105
    107 132
COND1 (105)
    on left: 205 206 207 208 209 210 211 212, on right: 110 112 133
    135
ID_NUM (106)
    on left: 213 214, on right: 49 50 52 53 54 55 101 131 177 193 215
COND2 (107)
    on left: 215, on right: 111 113 134 136
RET (108)
    on left: 216, on right: 124 137


state 0

    0 $accept: . S $end

    error      shift, and go to state 1
    PACKAGE    shift, and go to state 2
    CLASS      shift, and go to state 3
    HEADERC    shift, and go to state 4
    HEADERJ    shift, and go to state 5
    LONG       shift, and go to state 6
    DOUBLE     shift, and go to state 7
    INT        shift, and go to state 8
    FLOAT      shift, and go to state 9
    CHAR       shift, and go to state 10
    SHORT      shift, and go to state 11
    VOID       shift, and go to state 12
    BOOLEAN    shift, and go to state 13
    PUBLIC     shift, and go to state 14
    PRIVATE    shift, and go to state 15
    PROTECTED  shift, and go to state 16
    STATIC     shift, and go to state 17

    S            go to state 18
    PACKAGES     go to state 19
    IMPORTS      go to state 20
    HEADERS      go to state 21
    LIB_C        go to state 22
    LIB_J        go to state 23
    DTYPE        go to state 24
    CLASSHEADER  go to state 25
    MODIFIERS    go to state 26
    MODIFIER     go to state 27
    FUNC_C       go to state 28
    MAIN_C       go to state 29


state 1

   79 FUNC_C: error . ID '(' PARAM_C ')' '{' COND_C '}' FUNC_C
   81       | error . ID '(' error ')' '{' COND_C '}' FUNC_C

    ID  shift, and go to state 30


state 2

    9 PACKAGES: PACKAGE . CLASS_HIERARCHY ';'

    ID  shift, and go to state 31

    CLASS_HIERARCHY  go to state 32


state 3

   59 CLASSHEADER: CLASS . ID EXTEND INTERFACES '{' FUNC_J '}'
   61            | CLASS . ID EXTEND '{' FUNC_J '}'
   62            | CLASS . ID INTERFACES '{' FUNC_J '}'
   63            | CLASS . ID '{' FUNC_J '}'

    ID  shift, and go to state 33


state 4

   14 LIB_C: HEADERC . '<' ID '.' ID '>'

    '<'  shift, and go to state 34


state 5

   15 LIB_J: HEADERJ . CLASS_HIERARCHY ';'
   16      | HEADERJ . CLASS_HIERARCHY '.' '*' ';'
   17      | HEADERJ . CLASS_HIERARCHY error
   18      | HEADERJ . error ';'

    error  shift, and go to state 35
    ID     shift, and go to state 31

    CLASS_HIERARCHY  go to state 36


state 6

   23 DTYPE: LONG .

    $default  reduce using rule 23 (DTYPE)


state 7

   21 DTYPE: DOUBLE .

    $default  reduce using rule 21 (DTYPE)


state 8

   19 DTYPE: INT .
   95 MAIN_C: INT . MAIN '(' INT ID ',' CHAR '*' ID '[' ']' ')' '{' COND_C '}'
   96       | INT . MAIN '(' ')' '{' COND_C '}'

    MAIN  shift, and go to state 37

    $default  reduce using rule 19 (DTYPE)


state 9

   20 DTYPE: FLOAT .

    $default  reduce using rule 20 (DTYPE)


state 10

   22 DTYPE: CHAR .

    $default  reduce using rule 22 (DTYPE)


state 11

   24 DTYPE: SHORT .

    $default  reduce using rule 24 (DTYPE)


state 12

   26 DTYPE: VOID .

    $default  reduce using rule 26 (DTYPE)


state 13

   25 DTYPE: BOOLEAN .

    $default  reduce using rule 25 (DTYPE)


state 14

   69 MODIFIER: PUBLIC .

    $default  reduce using rule 69 (MODIFIER)


state 15

   71 MODIFIER: PRIVATE .

    $default  reduce using rule 71 (MODIFIER)


state 16

   70 MODIFIER: PROTECTED .

    $default  reduce using rule 70 (MODIFIER)


state 17

   72 MODIFIER: STATIC .

    $default  reduce using rule 72 (MODIFIER)


state 18

    0 $accept: S . $end

    $end  shift, and go to state 38


state 19

    3 S: PACKAGES . IMPORTS CLASSHEADER
    4  | PACKAGES . CLASSHEADER

    CLASS      shift, and go to state 3
    HEADERJ    shift, and go to state 5
    PUBLIC     shift, and go to state 14
    PRIVATE    shift, and go to state 15
    PROTECTED  shift, and go to state 16
    STATIC     shift, and go to state 17

    IMPORTS      go to state 39
    LIB_J        go to state 23
    CLASSHEADER  go to state 40
    MODIFIERS    go to state 26
    MODIFIER     go to state 27


state 20

    5 S: IMPORTS . CLASSHEADER

    CLASS      shift, and go to state 3
    PUBLIC     shift, and go to state 14
    PRIVATE    shift, and go to state 15
    PROTECTED  shift, and go to state 16
    STATIC     shift, and go to state 17

    CLASSHEADER  go to state 41
    MODIFIERS    go to state 26
    MODIFIER     go to state 27


state 21

    1 S: HEADERS . FUNC_C

    error    shift, and go to state 1
    LONG     shift, and go to state 6
    DOUBLE   shift, and go to state 7
    INT      shift, and go to state 8
    FLOAT    shift, and go to state 9
    CHAR     shift, and go to state 10
    SHORT    shift, and go to state 11
    VOID     shift, and go to state 12
    BOOLEAN  shift, and go to state 13

    DTYPE   go to state 24
    FUNC_C  go to state 42
    MAIN_C  go to state 29


state 22

   12 HEADERS: LIB_C .
   13        | LIB_C . LIB_C

    HEADERC  shift, and go to state 4

    $default  reduce using rule 12 (HEADERS)

    LIB_C  go to state 43


state 23

   10 IMPORTS: LIB_J .
   11        | LIB_J . LIB_J

    HEADERJ  shift, and go to state 5

    $default  reduce using rule 10 (IMPORTS)

    LIB_J  go to state 44


state 24

   75 FUNC_C: DTYPE . ID '(' PARAM_C ')' '{' COND_C '}' FUNC_C
   77       | DTYPE . ID '(' error ')' '{' COND_C '}' FUNC_C
   78       | DTYPE . error '(' PARAM_C ')' '{' COND_C '}' FUNC_C
   80       | DTYPE . error '(' error ')' '{' COND_C '}' FUNC_C

    error  shift, and go to state 45
    ID     shift, and go to state 46


state 25

    6 S: CLASSHEADER .

    $default  reduce using rule 6 (S)


state 26

   56 CLASSHEADER: MODIFIERS . CLASS ID EXTEND INTERFACES '{' FUNC_J '}'
   57            | MODIFIERS . CLASS ID EXTEND '{' FUNC_J '}'
   58            | MODIFIERS . CLASS ID INTERFACES '{' FUNC_J '}'
   60            | MODIFIERS . CLASS ID '{' FUNC_J '}'
   65 MODIFIERS: MODIFIERS . MODIFIER

    CLASS      shift, and go to state 47
    PUBLIC     shift, and go to state 14
    PRIVATE    shift, and go to state 15
    PROTECTED  shift, and go to state 16
    STATIC     shift, and go to state 17

    MODIFIER  go to state 48


state 27

   64 MODIFIERS: MODIFIER .

    $default  reduce using rule 64 (MODIFIERS)


state 28

    2 S: FUNC_C .

    $default  reduce using rule 2 (S)


state 29

   76 FUNC_C: MAIN_C .

    $default  reduce using rule 76 (FUNC_C)


state 30

   79 FUNC_C: error ID . '(' PARAM_C ')' '{' COND_C '}' FUNC_C
   81       | error ID . '(' error ')' '{' COND_C '}' FUNC_C

    '('  shift, and go to state 49


state 31

    8 CLASS_HIERARCHY: ID .

    $default  reduce using rule 8 (CLASS_HIERARCHY)


state 32

    7 CLASS_HIERARCHY: CLASS_HIERARCHY . '.' ID
    9 PACKAGES: PACKAGE CLASS_HIERARCHY . ';'

    '.'  shift, and go to state 50
    ';'  shift, and go to state 51


state 33

   59 CLASSHEADER: CLASS ID . EXTEND INTERFACES '{' FUNC_J '}'
   61            | CLASS ID . EXTEND '{' FUNC_J '}'
   62            | CLASS ID . INTERFACES '{' FUNC_J '}'
   63            | CLASS ID . '{' FUNC_J '}'

    EXTENDS     shift, and go to state 52
    IMPLEMENTS  shift, and go to state 53
    '{'         shift, and go to state 54

    EXTEND      go to state 55
    INTERFACES  go to state 56


state 34

   14 LIB_C: HEADERC '<' . ID '.' ID '>'

    ID  shift, and go to state 57


state 35

   18 LIB_J: HEADERJ error . ';'

    ';'  shift, and go to state 58


state 36

    7 CLASS_HIERARCHY: CLASS_HIERARCHY . '.' ID
   15 LIB_J: HEADERJ CLASS_HIERARCHY . ';'
   16      | HEADERJ CLASS_HIERARCHY . '.' '*' ';'
   17      | HEADERJ CLASS_HIERARCHY . error

    error  shift, and go to state 59
    '.'    shift, and go to state 60
    ';'    shift, and go to state 61


state 37

   95 MAIN_C: INT MAIN . '(' INT ID ',' CHAR '*' ID '[' ']' ')' '{' COND_C '}'
   96       | INT MAIN . '(' ')' '{' COND_C '}'

    '('  shift, and go to state 62


state 38

    0 $accept: S $end .

    $default  accept


state 39

    3 S: PACKAGES IMPORTS . CLASSHEADER

    CLASS      shift, and go to state 3
    PUBLIC     shift, and go to state 14
    PRIVATE    shift, and go to state 15
    PROTECTED  shift, and go to state 16
    STATIC     shift, and go to state 17

    CLASSHEADER  go to state 63
    MODIFIERS    go to state 26
    MODIFIER     go to state 27


state 40

    4 S: PACKAGES CLASSHEADER .

    $default  reduce using rule 4 (S)


state 41

    5 S: IMPORTS CLASSHEADER .

    $default  reduce using rule 5 (S)


state 42

    1 S: HEADERS FUNC_C .

    $default  reduce using rule 1 (S)


state 43

   13 HEADERS: LIB_C LIB_C .

    $default  reduce using rule 13 (HEADERS)


state 44

   11 IMPORTS: LIB_J LIB_J .

    $default  reduce using rule 11 (IMPORTS)


state 45

   78 FUNC_C: DTYPE error . '(' PARAM_C ')' '{' COND_C '}' FUNC_C
   80       | DTYPE error . '(' error ')' '{' COND_C '}' FUNC_C

    '('  shift, and go to state 64


state 46

   75 FUNC_C: DTYPE ID . '(' PARAM_C ')' '{' COND_C '}' FUNC_C
   77       | DTYPE ID . '(' error ')' '{' COND_C '}' FUNC_C

    '('  shift, and go to state 65


state 47

   56 CLASSHEADER: MODIFIERS CLASS . ID EXTEND INTERFACES '{' FUNC_J '}'
   57            | MODIFIERS CLASS . ID EXTEND '{' FUNC_J '}'
   58            | MODIFIERS CLASS . ID INTERFACES '{' FUNC_J '}'
   60            | MODIFIERS CLASS . ID '{' FUNC_J '}'

    ID  shift, and go to state 66


state 48

   65 MODIFIERS: MODIFIERS MODIFIER .

    $default  reduce using rule 65 (MODIFIERS)


state 49

   79 FUNC_C: error ID '(' . PARAM_C ')' '{' COND_C '}' FUNC_C
   81       | error ID '(' . error ')' '{' COND_C '}' FUNC_C

    error    shift, and go to state 67
    LONG     shift, and go to state 6
    DOUBLE   shift, and go to state 7
    INT      shift, and go to state 68
    FLOAT    shift, and go to state 9
    CHAR     shift, and go to state 10
    SHORT    shift, and go to state 11
    VOID     shift, and go to state 12
    BOOLEAN  shift, and go to state 13

    ')'  reduce using rule 44 (PARAM_C)

    DTYPE    go to state 69
    PARAM_C  go to state 70


state 50

    7 CLASS_HIERARCHY: CLASS_HIERARCHY '.' . ID

    ID  shift, and go to state 71


state 51

    9 PACKAGES: PACKAGE CLASS_HIERARCHY ';' .

    $default  reduce using rule 9 (PACKAGES)


state 52

   73 EXTEND: EXTENDS . CLASSNAME

    LONG     shift, and go to state 6
    DOUBLE   shift, and go to state 7
    INT      shift, and go to state 68
    FLOAT    shift, and go to state 9
    CHAR     shift, and go to state 10
    SHORT    shift, and go to state 11
    VOID     shift, and go to state 12
    BOOLEAN  shift, and go to state 13
    ID       shift, and go to state 31

    CLASS_HIERARCHY  go to state 72
    DTYPE            go to state 73
    CLASSNAME        go to state 74


state 53

   74 INTERFACES: IMPLEMENTS . CNAMELIST

    ID  shift, and go to state 31

    CLASS_HIERARCHY  go to state 75
    CNAMELIST        go to state 76


state 54

   63 CLASSHEADER: CLASS ID '{' . FUNC_J '}'

    error      shift, and go to state 77
    PUBLIC     shift, and go to state 78
    PRIVATE    shift, and go to state 15
    PROTECTED  shift, and go to state 16
    STATIC     shift, and go to state 17
